Compatible with browser / webpack test

--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Argon2 WebPack Demo</title>
-</head>
-<body>
-    <h1>Argon2 WebPack Demo By anbang</h1>
+  </head>
+  <body>
+    <h1>Argon2 WebPack Demo - Anbang Test</h1>
     <script src="./webpack-demo/dist/bundle.js"></script>
-    <pre>Output should appear here. If not, please check DevTools in your browser.</pre>
-</body>
+    <pre>
+Output should appear here. If not, please check DevTools in your browser.</pre
+    >
+  </body>
 </html>
