--- a/test/webpack/index.html
+++ b/test/webpack/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1>Argon2 WebPack Demo - Anbang Test</h1>
-    <script src="./webpack-demo/dist/bundle.js"></script>
+    <script src="./dist/bundle.js"></script>
     <pre>
 Output should appear here. If not, please check DevTools in your browser.</pre
     >
